Fixed compilation of Kotlin and Java sources